# Database-Manager-Console-App

./: CMakeLists.txt  Condition.cpp  Condition.h  Create.cpp  Create.h  CustomFormat.cpp  CustomFormat.h  DBController.h  Database.cpp  Database.h  Delete.cpp  Delete.h  Drop.h  Equal.cpp  Equal.h  Errors.h  Filter.cpp  Filter.h  Format.cpp  Format.h  Insert.cpp  Insert.h  NotEqual.cpp  NotEqual.h  QueryEditor.cpp  QueryEditor.h  README.md  Record.cpp  Record.h  SQLFormat.cpp  SQLFormat.h  Select.cpp  Select.h  Statement.cpp  Statement.h  StringManipulator.cpp  StringManipulator.h  Table.cpp  Table.h  Update.cpp  (+2 more)
